--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,23 @@
 /*elementos base*/
 body{
    background: var(--preta);
-   font-family: 'Times New Roman', Times, serif;
+   font-family: 'Arial', Times, serif;
    color: #fff;
 }
 
+.container{
+    margin-left: 30px;
+
+}
+
+.filme-principal .container{
+    width: 70%;
+}
+
 header .container{
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 header .logo{
@@ -52,9 +61,43 @@ header nav a:hover{
 }
 
 .filme-principal .descricao{
+    margin-top: 10px;
     margin-bottom: 40px;
 }
 
-.titulo{
+.filme-principal .titulo{
+    margin-top: 15%;
     font-size: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.botao{
+    background-color:rgba(0,0,0,.50) ;
+    border: none;
+    color: #fff;
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: .3s ease all;
+
+}
+
+.botao:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+.botao i{
+    margin-right: 10px;
+}
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.carrosel-filmes{
+    margin-top: 5px;
 }
