--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,7 +12,7 @@
 
     .titulo{
         margin-top: 10%!important;
-        font-size: 35px!important;
+        font-size: 30px!important;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
     
@@ -23,4 +23,10 @@
         width: 50%;
     }
     
+}
+@media screen and (max-width:500px) {
+    .modal-title{
+        font-size: 20px;
+    }
+
 }
